auto play button style changed

--- a/rock-paper-scissors-final.html
+++ b/rock-paper-scissors-final.html
@@ -28,7 +28,7 @@
     document.querySelector('.js-result').innerHTML='';
     document.querySelector('.js-moves').innerHTML='';
     " class="reset-score-button">Reset Score</button>
-    <button class="auto-play-button" onclick="
+    <button class="auto-play-button js-auto-play-button" onclick="
     autoPlay();
     ">Auto Play</button>
   <script src="scripts/rock-paper-scissors-final.js"></script>
