--- a/rock-paper-scissors-final.html
+++ b/rock-paper-scissors-final.html
@@ -9,32 +9,24 @@
 
 <body>
   <div class="main">
-  <p class="title">Rock Paper Scissors</p>
+    <p class="title">Rock Paper Scissors</p>
 
-  <button class="move-button js-rock-button"><img class="move-icon" src="images/rock-emoji.png"></button>
-  <button class="move-button js-paper-button"><img src="images/paper-emoji.png" class="move-icon"></button>
-  <button class="move-button js-scissors-button"><img src="images/scissors-emoji.png" class="move-icon"></button>
+    <button class="move-button js-rock-button"><img class="move-icon" src="images/rock-emoji.png"></button>
+    <button class="move-button js-paper-button"><img src="images/paper-emoji.png" class="move-icon"></button>
+    <button class="move-button js-scissors-button"><img src="images/scissors-emoji.png" class="move-icon"></button>
 
-  <p class="js-result result"></p>
-  <p class="js-moves moves"></p>
-  <p class="js-score score"></p>
+    <p class="js-result result"></p>
+    <p class="js-moves moves"></p>
+    <p class="js-score score"></p>
 
-  <button onclick="
-    score.wins=0;
-    score.loses=0;
-    score.ties=0;
-    localStorage.removeItem('score');
-    updateScore();
-    document.querySelector('.js-result').innerHTML='';
-    document.querySelector('.js-moves').innerHTML='';
-    " class="reset-score-button">Reset Score</button>
+    <button onclick="resetButton();" class="reset-score-button js-reset-score-button">Reset Score</button>
     <button class="auto-play-button js-auto-play-button" onclick="
     autoPlay();
     ">Auto Play</button>
-  <script src="scripts/rock-paper-scissors-final.js"></script>
- 
-</div>
-<p class="my-sign">- Jagmohan Gautam</p>
+    <script src="scripts/rock-paper-scissors-final.js"></script>
+
+  </div>
+  <p class="my-sign">- Jagmohan Gautam</p>
 </body>
 
 </html>
